[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Menus/UI_MainMenu.png" type="Texture" id=1]
[ext_resource path="res://DungeonGeneration/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="NewGame" type="TextureButton" parent="."]
margin_left = 281.0
margin_top = 448.0
margin_right = 295.0
margin_bottom = 475.0
rect_scale = Vector2( 27.8961, 3.65279 )

[node name="Credits" type="TextureButton" parent="."]
anchor_left = 0.238
anchor_top = 0.554
anchor_right = 0.238
anchor_bottom = 0.554
margin_left = -158.96
margin_top = -43.32
margin_right = 117.04
margin_bottom = 50.68

[node name="Exit" type="TextureButton" parent="."]
anchor_left = 0.196
anchor_top = 0.691
anchor_right = 0.196
anchor_bottom = 0.691
margin_left = -78.32
margin_top = -53.28
margin_right = 76.68
margin_bottom = 43.72

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
